# yt-service

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260520_0900_p1_initial.py
deploy/: Caddyfile.snippet  README.md  nginx.conf.snippet  yt-transcript-monitor.service  yt-transcript-worker-default.service  yt-transcript-worker-enrichment.service  yt-transcript-worker-intelligence.service  yt-transcript-worker-whisper.service  yt-transcript.service
deploy/skill/youtube-transcript/: INSTALL.md  README.md  SKILL.md
docs/: JUDGEMENT_CALLS.md
docs/plans/: phase1-plan.md  phase2-plan.md  phase3-plan.md
docs/specs/: yt-transcript-service-spec.md
docs/superpowers/specs/: 2026-05-20-yt-service-design.md
scripts/: install.sh  make_token.sh  smoke_test.sh
src/app/: __init__.py  admin.py  auth.py  cache.py  chapters.py  config.py  db.py  deep_links.py  diarization.py  domain.py  exceptions.py  ingest.py  jobs.py  logging.py  main.py  metrics.py  middleware.py  models.py  monitor_scheduler.py  monitors.py  parsing.py  redis_client.py  schemas.py  serialization.py  transcript_service.py  url_safety.py  webhooks.py  worker.py  youtube.py
src/app/llm/: __init__.py  anthropic_client.py  cost.py  fallback.py  gemini_client.py  llmapi_client.py  openai_client.py  providers.py  routing.py
tests/: conftest.py
tests/integration/: test_admin_tokens.py  test_cache.py  test_jobs.py  test_models.py
tests/unit/: _endpoint_helpers.py  test_audio.py  test_auth.py  test_chapters.py  test_config.py  test_diarization.py  test_domain.py  test_endpoint_auth.py  test_endpoint_batch.py  test_endpoint_cache.py  test_endpoint_ingest_monitors.py  test_endpoint_jobs.py  test_endpoint_meta.py  test_endpoint_p4.py  test_endpoint_rate_limit.py  test_endpoint_summarize.py  test_endpoint_transcript.py  test_exceptions.py  test_jobs.py  test_jobs_locks.py  test_llm_fallback.py  test_logging.py  test_metrics.py  test_middleware.py  test_parsing.py  test_schemas.py  test_serialization.py  test_summarize.py  test_transcript_service.py  test_url_safety.py  test_webhooks.py  test_whisper.py  test_worker.py  test_youtube.py
(+12 files in other folders)
