[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-service"
version = "0.1.0"
description = "YouTube transcript intelligence platform: captions, Whisper, chaptering, diarization, topics, summarization, diff."
authors = [{name = "Eric Arnst"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Proprietary"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pyannote.*",
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::UserWarning:torch.*",
    # respx/httpx + Windows occasionally leaves a transient socket open
    # between tests; pytest re-raises it as PytestUnraisableExceptionWarning.
    # It is not a correctness defect — downgrade to a warning so the suite
    # is not order-dependent.
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]
markers = [
    "integration: tests that touch Postgres/Redis (use --run-integration)",
    "slow: tests that take >1s",
]

[tool.coverage.run]
branch = true
source_pkgs = ["app"]
omit = [
    "src/app/__init__.py",
    "src/app/whisper/local_backend.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 85

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC", "S"]
ignore = ["S101"]  # asserts ok in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "S311"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
